# ub_lincoln_vehicle_launch

ub_lincoln_vehicle_description/: CMakeLists.txt  package.xml
ub_lincoln_vehicle_description/config/: mirror.param.yaml  vehicle_info.param.yaml
ub_lincoln_vehicle_description/urdf/: vehicle.xacro
ub_lincoln_vehicle_launch/: CMakeLists.txt  package.xml
ub_lincoln_vehicle_launch/launch/: vehicle_interface.launch.xml
