<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ub_lincoln_vehicle_launch</name>
  <version>0.0.1</version>
  <description>The ub_lincoln_vehicle_launch package</description>
  <maintainer email="cse-cavas@buffalo.edu">UB CSE CAVAS</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
